# MInDes_FileSelector

./: CMakeLists.txt  CMakePresets.json  TODO.md  file_selector.hpp  main.cpp
src/: CommandProcessor.cpp  CommandProcessor.hpp  FileSelector.cpp  FileSelector.hpp  FileSystemManager.cpp  FileSystemManager.hpp  IFileSelectorUI.hpp  KeyEnum.hpp  TerminalManager.cpp  TerminalManager.hpp  UIRenderer.cpp  UIRenderer.hpp  UnixFileSelectorUI.cpp  UnixFileSelectorUI.hpp  WindowsFileSelectorUI.cpp  WindowsFileSelectorUI.hpp
test/: test_commandprocessor.cpp  test_filesystemmanager.cpp  test_runner
